<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mariogl.exam1.CurrencyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_title"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_from"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to"
        android:id="@+id/textView2"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currency_from"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:text="(MXN)" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currency_to"
        android:textSize="20sp"
        android:text="(DLLs)"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/currency_from"
        android:layout_alignEnd="@+id/currency_from" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings"
        android:id="@+id/button"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/currency_to"
        android:onClick="goToSettings"
        android:layout_alignRight="@+id/currency_to"
        android:layout_alignEnd="@+id/currency_to" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/currency_textfield"
        android:layout_below="@+id/button"
        android:layout_marginTop="49dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Convert!"
        android:id="@+id/button2"
        android:layout_below="@+id/currency_textfield"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="convertMyMoney" />
</RelativeLayout>
